--- a/src/app/batting-data/batting-data.component.css
+++ b/src/app/batting-data/batting-data.component.css
@@ -1,4 +1,8 @@
-.table-center {
+.center {
     align-items: center;
     margin: auto;
+}
+p {
+    align-items: center;
+    align-self: center;
 }
