--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
         <a id="bowlingData" routerLink="/bowlingData" class="mdl-tabs__tab">Bowling Stats</a>
         <a id="addData" routerLink="/addData" class="mdl-tabs__tab ">Add Data</a>
         <a id="recentForm" routerLink="/recentForm" class="mdl-tabs__tab">Recent Form</a>
-        <a id="availability" routerLink="/availability" class="mdl-tabs__tab " hidden disabled="true">Availability</a>
+        <a id="availability" routerLink="/availability" class="mdl-tabs__tab " >Availability</a>
     </div>
 </div>
 <router-outlet></router-outlet>
