Added tab to view availability data

--- a/src/app/availability/availability.component.html
+++ b/src/app/availability/availability.component.html
@@ -1,6 +1,3 @@
-<p>
-  availability works!
-</p>
 <!-- <script type="text/javascript">
   google.charts.load('current', {'packages':['table']});
   google.charts.setOnLoadCallback(drawTable);
@@ -23,4 +20,11 @@
   }
 </script>
 <div id="table_div" onload="drawTable()"></div> -->
+
+
+<div class="center"> 
+  <iframe class="sheet-display center"
+  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRrcaU2O1bKoNolDecHQI4kmgybtM0IwvSSkca-W--YxbMB7F90VU9tgZAns0JhEOxVfQPNHZ6UkVhx/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false">
+</iframe>
+</div>
 <app-google-chart [chartType] = "chartType"></app-google-chart>
