--- a/src/app/bowling-data/bowling-data.component.css
+++ b/src/app/bowling-data/bowling-data.component.css
@@ -1,7 +1,7 @@
 .center {
     align-items: center;
     margin: auto;
-    text-align: center
+    text-align: center;
 }
 p {
     align-items: center;
