--- a/src/app/availability/availability.component.html
+++ b/src/app/availability/availability.component.html
@@ -1,3 +1,30 @@
-<p>
-  availability works!
-</p>
+<!-- <script type="text/javascript">
+  google.charts.load('current', {'packages':['table']});
+  google.charts.setOnLoadCallback(drawTable);
+
+  function drawTable() {
+    var data = new google.visualization.DataTable();
+    data.addColumn('string', 'Name');
+    data.addColumn('number', 'Salary');
+    data.addColumn('boolean', 'Full Time Employee');
+    data.addRows([
+      ['Mike',  {v: 10000, f: '$10,000'}, true],
+      ['Jim',   {v:8000,   f: '$8,000'},  false],
+      ['Alice', {v: 12500, f: '$12,500'}, true],
+      ['Bob',   {v: 7000,  f: '$7,000'},  true]
+    ]);
+
+    var table = new google.visualization.Table(document.getElementById('table_div'));
+
+    table.draw(data, {showRowNumber: true, width: '100%', height: '100%'});
+  }
+</script>
+<div id="table_div" onload="drawTable()"></div> -->
+
+
+<div class="center"> 
+  <iframe class="sheet-display center"
+  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRrcaU2O1bKoNolDecHQI4kmgybtM0IwvSSkca-W--YxbMB7F90VU9tgZAns0JhEOxVfQPNHZ6UkVhx/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false">
+</iframe>
+</div>
+<app-google-chart [chartType] = "chartType"></app-google-chart>
